2008-11-03  kitone  <kitone@gna.org>

	* share/menubar.xml:
	Small fixes.

2008-11-03  kitone  <kitone@gna.org>

	* share/menubar.xml:
	Replace menuitem by placeholder.

	* src/gui/MenuBar.cc:
	Add menus Selection, Video and Waveform.

2008-11-03  kitone  <kitone@gna.org>

	* Makefile.am:
	* configure.in:
	* plugins/Makefile.am:
	* plugins/actions/Makefile.am:
	New directory for plugins.

2008-11-03  kitone  <kitone@gna.org>

	* src/Makefile.am:
	Splitting of subtitleeditor with libsubtitleeditor.

2008-11-03  kitone  <kitone@gna.org>

	* configure.in:
	libtoolize subtitleeditor.

2008-11-03  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/extension/Action.cc:
	* src/extension/Action.h:
	New file, Action extension.

2008-11-03  kitone  <kitone@gna.org>

	* configure.in:
	New value PACKAGE_PLUGIN_DIR.

	* src/Extension.cc:
	* src/Extension.h:
	* src/ExtensionInfo.cc:
	* src/ExtensionInfo.h:
	* src/ExtensionManager.cc:
	* src/ExtensionManager.h:
	* src/Makefile.am:
	New files, introduce a new extension system.

2008-11-03  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2008-11-02  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.26.0 release.

2008-11-02  kitone  <kitone@gna.org>

	* src/FileWriter.h:
	* src/Subtitle.cc:
	Fix: bug #12542 (https://gna.org/bugs/?12542)
	Unable to build Subtitleeditor 0.25.0

2008-10-30  kitone  <kitone@gna.org>

	* src/formats/AdvancedSubStationAlpha.h:
	* src/formats/SubStationAlpha.h:
	Fix: ASS/SSA newline (patch by Robert Ramiega)

2008-10-29  kitone  <kitone@gna.org>

	* src/formats/AdvancedSubStationAlpha.h:
	* src/formats/SubStationAlpha.h:
	Add a default style if the document doesn't 
	at least one when the file is saved.

2008-10-28  kitone  <kitone@gna.org>

	* src/formats/MicroDVD.h:
	Fix: MicrDVD to SE tags conversion.

2008-10-27  kitone  <kitone@gna.org>

	* TODO:
	Update.

2008-10-27  kitone  <kitone@gna.org>

	* configure.in:
	* src/Makefile.am: