@@ -3,6 +3,15 @@
 	* share/menubar.xml:
 	Small fixes.
 
+	* src/gui/Application.cc:
+	* src/gui/Application.h:
+	Remove PluginSystem code and replace by ExtensionManager.
+
+2008-11-03  kitone  <kitone@gna.org>
+
+	* share/menubar.xml:
+	Small fixes.
+
 2008-11-03  kitone  <kitone@gna.org>
 
 	* share/menubar.xml:
